@@ -19,6 +19,11 @@ inherits(GetMoreCommand, BaseCommand);
 GetMoreCommand.OP_GET_MORE = 2005;
 
 GetMoreCommand.prototype.toBinary = function() {
+  // Validate that we are not passing 0x00 in the colletion name
+  if(!!~this.collectionName.indexOf("\x00")) {
+    throw new Error("namespace cannot contain a null character");
+  }
+
   // Calculate total length of the document
   var totalLengthOfCommand = 4 + Buffer.byteLength(this.collectionName) + 1 + 4 + 8 + (4 * 4);
   // Let's build the single pass buffer command
