@@ -62,6 +62,11 @@ struct {
 }
 */
 UpdateCommand.prototype.toBinary = function() {
+  // Validate that we are not passing 0x00 in the colletion name
+  if(!!~this.collectionName.indexOf("\x00")) {
+    throw new Error("namespace cannot contain a null character");
+  }
+
   // Calculate total length of the document
   var totalLengthOfCommand = 4 + Buffer.byteLength(this.collectionName) + 1 + 4 + this.db.bson.calculateObjectSize(this.spec, false, true) +
       this.db.bson.calculateObjectSize(this.document, this.serializeFunctions, true) + (4 * 4);
